--- a/KD/KD.csproj
+++ b/KD/KD.csproj
@@ -418,12 +418,18 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\Function\UI.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Scripts\Views\KD\controlller.js" />
-    <Content Include="Scripts\Views\KD\data.js" />
-    <Content Include="Scripts\Views\KD\dom.js" />
-    <Content Include="Scripts\Views\KD\helper.js" />
-    <Content Include="Scripts\Views\KD\store.js" />
-    <Content Include="Scripts\Views\KD\view.js" />
+    <Content Include="Scripts\Views\Categories\controlller.js" />
+    <Content Include="Scripts\Views\Categories\data.js" />
+    <Content Include="Scripts\Views\Categories\dom.js" />
+    <Content Include="Scripts\Views\Categories\helper.js" />
+    <Content Include="Scripts\Views\Categories\store.js" />
+    <Content Include="Scripts\Views\Categories\view.js" />
+    <Content Include="Scripts\Views\Products\controlller.js" />
+    <Content Include="Scripts\Views\Products\data.js" />
+    <Content Include="Scripts\Views\Products\dom.js" />
+    <Content Include="Scripts\Views\Products\helper.js" />
+    <Content Include="Scripts\Views\Products\store.js" />
+    <Content Include="Scripts\Views\Products\view.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
